<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaperFly</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sends_message">Sends the message</string>
    <string name="action_scanQR">Scan QR</string>
    <string name="title_activity_path_description">PathDescriptionActivity</string>
    <string name="title_activity_neue">NeueActivity</string>
    <string name="title_activity_web_socket_test">MainActivity</string>
    <string name="title_activity_web_socket_test_main">WebSocketTestMainActivity</string>
    <string name="action_websockettest">WebSocketTest</string>
    <string name="menu_maps">Maps</string>
    <string name="action_logout">Logout</string>
    <string name="action_show_persons">Persons online</string>
    <string name="nav_header_general">General</string>
    <string name="nav_item_check_presence">Check presence</string>
    <string name="nav_header_chats">Chats</string>
    <string name="nav_item_global">Global</string>
    <string name="nav_item_enter_room">Enter Room</string>
    <string name="nav_item_open_friendlist">Friendlist</string>
    <string name="action_help">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="action_search_user">Search User</string>
    <string name="title_activity_search_user">Search results</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_edit_account_data">EditAccountDataActivity</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="userName">userName</string>
    <string name="email">mail</string>
    <string name="nav_item_my_account">My Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="please_wait">Please wait</string>
    <string name="no_friends">You have no friends yet</string>
    <string name="title_activity_user_register">UserRegisterActivity</string>
    <string name="prompt_password_repeat">Password repeat</string>
    <string name="back_to_register">back to login</string>
    <string name="nothing_found">Nothing was found</string>

</resources>
