<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_websockettest"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_websockettest" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@android:string/search_go" />
    <item
        android:id="@+id/action_scanQR"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="ifRoom"
        android:title="@string/action_scanQR" />
</menu>
