<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".UserRegisterActivity">

    <!-- Login form -->
    <ScrollView
        android:id="@+id/edit_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical">

            <EditText
                android:id="@+id/accountUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:maxLines="1"
                android:singleLine="true"
                android:editable="true"
                android:inputType="textPersonName"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/accountMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:editable="true"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/accountFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/accountLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true"
                android:editable="true"
                android:inputType="textPassword"
                android:maxLength="20"/>

            <EditText
                android:id="@+id/password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password_repeat"
                android:maxLines="1"
                android:editable="true"
                android:singleLine="true"
                android:inputType="textPassword"
                android:maxLength="20"/>

            <TextView
                android:id="@+id/register_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/update_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_register"
                android:onClick="register"/>

        </LinearLayout>

    </ScrollView>


</merge>