<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditAccountDataActivity$PlaceholderFragment">

    <!-- Login form -->
    <ScrollView
        android:id="@+id/edit_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical">

            <EditText
                android:id="@+id/accountFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstName"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text|textPersonName"
                android:maxLength="20" />

            <EditText
                android:id="@+id/accountLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text|textPersonName"
                android:maxLength="20" />

            <EditText
                android:id="@+id/accountMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/accountUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text|textPersonName"
                android:maxLength="20" />

            <Button
                android:id="@+id/update_button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:onClick="pressedUpdate"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="update" />

            <TextView
                android:id="@+id/register_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>

